Test/errors/err_lock_types_not_copyable.cb
// All six lock/sync primitives own their OS handle through a `unique void*`
// slot, which suppresses memberwise copy (see mutex.cb/rwlock.cb/event.cb/
// semaphore.cb/barrier.cb). Copying would hand the same OS handle to two
// synthesized destructors and double-destroy it. `mutex b = a;` still works -
// that MOVES, leaving one owner - only an explicit `.copy()` is refused.

import "mutex.cb";
import "rwlock.cb";
import "event.cb";
import "semaphore.cb";
import "barrier.cb";

expect_error("cannot copy 'mutex': its field 'mutex._srw' is 'unique'") {
    void testMutexCopy() {
        mutex a;
        mutex b = a.copy();
    }
}

expect_error("cannot copy 'condvar': its field 'condvar._slot' is 'unique'") {
    void testCondvarCopy() {
        condvar a;
        condvar b = a.copy();
    }
}

expect_error("cannot copy 'rwlock': its field 'rwlock._lock' is 'unique'") {
    void testRwlockCopy() {
        rwlock a;
        rwlock b = a.copy();
    }
}

expect_error("cannot copy 'event': its field 'event._h' is 'unique'") {
    void testEventCopy() {
        event a;
        event b = a.copy();
    }
}

expect_error("cannot copy 'semaphore': its field 'semaphore._handle' is 'unique'") {
    void testSemaphoreCopy() {
        semaphore a;
        semaphore b = a.copy();
    }
}

expect_error("cannot copy 'barrier': its field 'barrier._mtx._srw' is 'unique'") {
    void testBarrierCopy() {
        barrier a;
        barrier b = a.copy();
    }
}

extern int main()
{
    return 0;
}
